--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,70 @@ a img {
   justify-content: center;
   align-items: center;
   box-shadow: 3px 3px 10px gray;
-  border-radius: 40px 30px 20px 25px;
+  border-radius: 40px 10px 40px 5px;
   margin-bottom: 20px;
 }
 .row .left-box img {
   margin-bottom: 20px;
+}
+/* Form */
+.form-container {
+  width: 500px;
+  background: #f4f4f4;
+  margin: auto;
+  padding: 30px;
+  margin-top: 2px;
+}
+
+#form {
+  background: #f4f4f4;
+}
+.form-wrap {
+  line-height: 1.8;
+  color: #444;
+}
+.form-wrap h2,
+.form-wrap p {
+  text-align: center;
+}
+.form-group {
+  margin-top: 10px;
+}
+.form-wrap label {
+  display: block;
+}
+.form-wrap input {
+  padding: 10px;
+}
+.form-wrap input,
+.form-wrap textarea {
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+.form-button {
+  display: block;
+  width: 100%;
+  background: #333;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.form-button:hover {
+  background: #444;
+}
+.form-footer {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 13px;
+}
+/* Main Footer */
+.main-footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    line-height: 1.4;
 }
